<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/chat"
        android:iconTint="@color/cardview_light_background"
        android:title="@string/nav_chat"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/phonebook"
        android:title="@string/nav_friends"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/nav_extras"
        android:icon="@drawable/datasymbolsintoafunnel"
        android:orderInCategory="4"
        android:title="@string/nav_extras" />
    <item
        android:id="@+id/nav_moi"
        android:icon="@drawable/businessman"
        android:title="@string/nav_moi"
        android:orderInCategory="5"/>
</menu>