<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="1"
    android:baselineAligned="false">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:background="@android:color/background_light"
        app:srcCompat="@drawable/logo1n"
        android:layout_weight="0.10" />

    <TextView
        android:id="@+id/TextCodeEnvoye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.39"
        android:text="@string/Un_code_vous_a_été_envoyé_par_SMS"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/numéroCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/Veuillez_entrer_le_code_de_confirmation"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_weight="0.11" />

    <EditText
        android:id="@+id/entrerCode"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.34"
        android:background="@color/green"
        android:ems="10"
        android:hint="@string/Entrez_le_code_ici"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/green"
        android:layout_weight="0.28">

        <customfonts.MyTextView
            android:id="@+id/buttonvalidezCode"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/Validez"
            android:textColor="#9e3d41"
            android:textSize="20dp"

            />

    </FrameLayout>

</LinearLayout>