<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:background="@android:color/background_light"
        app:srcCompat="@drawable/logo1n" />

    <TextView
        android:id="@+id/bienvenueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:background="@android:color/background_light"
        android:text="@string/Bienvenue_sur_WeMoney"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/Nom_utilisateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="@android:color/background_light"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/numéroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:background="@color/green"
        android:text="@string/Veuillez_entrer_votre_numéro_de_téléphone"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/entrerTelephone"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.34"
        android:background="@color/green"
        android:ems="10"
        android:hint="@string/entrez_votre_num_ici"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="0.08"
        android:background="@color/green">

        <customfonts.MyTextView
            android:id="@+id/ValiderNum"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/Validez"
            android:textColor="#9e3d41"
            android:textSize="20dp"

            />
    </FrameLayout>

</LinearLayout>