<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="ws.wolfsoft.shoeshappiness.ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/default_avatar" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Name_user_courant"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/Statut_user_courant"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/correct_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/Nombre_d_ami"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp" />

    <Button
        android:id="@+id/correct_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/profile_totalFriends"
        android:layout_toEndOf="@+id/profile_totalFriends"
        android:layout_toRightOf="@+id/profile_totalFriends"
        android:background="@drawable/correct"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="7dp"
        android:text="WeMoney "
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <Button
        android:id="@+id/alertebtn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/profile_totalFriends"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/profile_totalFriends"
        android:layout_toStartOf="@+id/profile_totalFriends"
        android:background="@drawable/alerte"
        android:visibility="invisible" />

    <Button
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_decline_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/rectangleannulerdemande"
        android:text="@string/Demande_d_ami"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/profile_decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@drawable/rectangle_decline_btn"
        android:text="Annuler la demande"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>
