<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"> >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="216dp"
            android:layout_height="190dp"
            android:src="@drawable/logo1n"
            android:layout_gravity="center_horizontal"
            android:layout_margin="70dp"



            />



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >




            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView

                    android:id="@+id/back"
                    android:layout_width="21dp"
                    android:layout_height="33dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/arrowback" />


                <customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/Inscription"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22dp"

                    />




            </LinearLayout>


            <LinearLayout
                android:background="@drawable/signup"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >

                <customfonts.MyEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="65dp"
                    android:background="#0000"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="35dp"
                    android:hint="@string/Nom_d_utilisateur"
                    android:inputType="text"
                    android:maxLength="50"

                    android:padding="16dp"
                    android:textColor="@android:color/holo_green_dark"
                    android:textColorHint="@android:color/holo_green_light"
                    android:textSize="16dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_orange_light" />

                <customfonts.MyEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="65dp"
                    android:background="#0000"
                    android:drawableLeft="@drawable/mail"
                    android:drawablePadding="35dp"
                    android:hint="Email"
                    android:inputType="text"
                    android:maxLength="50"

                    android:padding="16dp"
                    android:textColor="@android:color/holo_green_dark"
                    android:textColorHint="@android:color/holo_green_light"
                    android:textSize="16dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_orange_light" />


                <customfonts.MyEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:background="#0000"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="38dp"
                    android:hint="@string/Mot_de_passe"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:padding="16dp"
                    android:textColor="@android:color/holo_green_dark"

                    android:textColorHint="@android:color/holo_green_light"
                    android:textSize="16dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_orange_light"
                    android:layout_marginBottom="63dp"
                    />


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="160dp"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="bottom"
            android:layout_marginBottom="85dp"
            android:layout_marginLeft="110dp"
            />

    </FrameLayout>

    <customfonts.MyTextView
        android:id="@+id/signupbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/rect"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/Inscription"
        android:textColor="#9e3d41"
        android:textSize="20dp"

        />







</RelativeLayout>
